# huawei-study

./: README.md
HUAWEI_CangJie/: README.md
HUAWEI_Cloud Service/: README.md
HUAWEI_HMS/: README.md
HUAWEI_HarmonyOS/: HarmonyOS简介.docx  README.md
HUAWEI_HarmonyOS/HarmonyOS_Application/: HarmonyOS_Application技术栈.docx  HarmonyOS功能调试.docx  HarmonyOS应用包结构.docx  HarmonyOS应用发布.docx  HarmonyOS数据库.docx  HarmonyOS日志管理.docx  HarmonyOS权限管理.docx  HarmonyOS线程管理.docx  HarmonyOS网络管理.docx  README.md
HUAWEI_HarmonyOS/HarmonyOS_Application/HarmonyOS Ability/: HarmonyOS Ability Intent简介.docx  HarmonyOS Ability 公共事件与通知.docx  HarmonyOS Ability简介.docx  HarmonyOS Feature Ability简介.docx  HarmonyOS Particle Ability简介.docx
HUAWEI_HarmonyOS/HarmonyOS_Application/HarmonyOS Demo 示例/: README.md
HUAWEI_HarmonyOS/HarmonyOS_Application/HarmonyOS JS UI/: HarmonyOS JS UI动画.docx  HarmonyOS JS UI框架简介.docx  HarmonyOS JS UI添加用户交互.docx  HarmonyOS JS开发常见问题.docx  HarmonyOS中JS、HML和CSS的概念及三者之间的关系.docx
HUAWEI_HarmonyOS/HarmonyOS_Application/HarmonyOS数据库管理/: README.md
HUAWEI_HarmonyOS/HarmonyOS_Device/: README.md
HUAWEI_HarmonyOS/HarmonyOS_Device/Demo/app/night_small_led/: BUILD.gn  README_zh.md  nightled.c
HUAWEI_IoT/: HCIA-IoT 习题整理.docx  README.md
HUAWEI_OpenEuler/: README.md
HUAWEI_Resources/: README.md
HUAWEI_Resources/鸿蒙应用区隔UX规范及脱敏源文件/: 鸿蒙应用区隔UX规范_v1.01.pptx
HUAWEI_Resources/鸿蒙服务卡片图标设计规范/: 原子化服务图标设计源文件_216&512.sketch  原子化服务图标设计源文件_216.psd  原子化服务图标设计源文件_512.psd
Other/: README.md
Other/C/: README.md
Other/HTML/: GluttonousSnakePlus.html
Other/Java/: README.md  enum_for.java
(+208 files in other folders)
